--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=localhost,1433;Database=Inventory;User Id=sa;Password=1G69YN3xOErR;TrustServerCertificate=True;MultipleActiveResultSets=true;"
+  }
 }
