--- a/.github/workflows/variables-and-context.yaml
+++ b/.github/workflows/variables-and-context.yaml
@@ -20,7 +20,7 @@ jobs:
     steps:
     - name: Dump Hello World
       env:
-        GITHUB_CONTEXT: ${{ totoJson(github) }}
+        GITHUB_CONTEXT: ${{ toJson(github) }}
       run: echo "Hello $GITHUB_CONTEXT"
 
   job2:
