--- a/.github/workflows/variables-and-context.yaml
+++ b/.github/workflows/variables-and-context.yaml
@@ -40,6 +40,8 @@ jobs:
   job3:
     name: Executing Job 3...
     runs-on: ubuntu-latest
+    needs:
+    - job2
     steps:
     - name: Dump variables from previous job
       run: |
