--- a/.github/workflows/ims-webapp.yaml
+++ b/.github/workflows/ims-webapp.yaml
@@ -22,6 +22,9 @@ jobs:
               with:
                 dotnet-version: '9.x.x'
 
+            - name: Check file structure
+              run: ls -la ${{ github.workspace }}
+
             - name: Restore project's dependencies
               run: dotnet restore ${{ github.workspace }}/**/*.csproj --no-cache
 
