--- a/.github/workflows/ims-webapp.yaml
+++ b/.github/workflows/ims-webapp.yaml
@@ -26,10 +26,10 @@ jobs:
               run: ls -la ${{ github.workspace }}
 
             - name: Restore project's dependencies
-              run: dotnet restore "${{ github.workspace }}/coffee-shop-ims.csproj" --no-cache
+              run: dotnet restore ${{ github.workspace }} --no-cache
 
             - name: Build project
-              run: dotnet build ${{ github.workspace }}/coffee-shop-ims.sln --no-restore
+              run: dotnet build ${{ github.workspace }} --no-restore
 
             - name: Publish project
-              run: dotnet publish ${{ github.workspace }}/coffee-shop-ims.csproj --no-build --output .out
+              run: dotnet publish ${{ github.workspace }} --no-build --output ${{ github.workspace }}/.out
