--- a/.github/workflows/ims-webapp.yaml
+++ b/.github/workflows/ims-webapp.yaml
@@ -22,14 +22,14 @@ jobs:
               with:
                 dotnet-version: '9.x.x'
 
-            - name: Check file structure
-              run: ls -la ${{ github.workspace }}
-
             - name: Restore project's dependencies
               run: dotnet restore ${{ github.workspace }} --no-cache
 
             - name: Build project
               run: dotnet build ${{ github.workspace }} --no-restore
+
+            - name: Check file structure
+              run: ls -la ${{ github.workspace }}/obj/Release/net9.0/ 
 
             - name: Publish project
               run: dotnet publish ${{ github.workspace }} --no-build --output ${{ github.workspace }}/.out
