--- a/.github/workflows/ims-webapp.yaml
+++ b/.github/workflows/ims-webapp.yaml
@@ -6,32 +6,65 @@ on:
       - main
   workflow_dispatch:
 
+env:
+  AZURE_WEBAPP_NAME: cs-ims-sea-dev-wa
+  AZURE_WEBAPP_PACKAGE_PATH: "."
+  DOTNET_VERSION: "9.x.x"
+
+permissions:
+  contents: read
+
 jobs:
-    build:
-        name: Build application
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout repository
-              uses: actions/checkout@v5
-              with:
-                fetch-depth: 0
-                clean: true
+  build:
+    name: Build application
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v5
+        with:
+          clean: true
 
-            - name: Install .NET Core SDK
-              uses: actions/setup-dotnet@v4
-              with:
-                dotnet-version: '9.x.x'
+      - name: Install .NET Core SDK
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: ${{ env.DOTNET_VERSION }}
 
-            - name: Restore project's dependencies
-              run: dotnet restore ${{ github.workspace }} --no-cache
+      - name: Restore project's dependencies
+        run: dotnet restore ${{ github.workspace }} --no-cache
 
-            - name: Build project
-              run: dotnet build ${{ github.workspace }} --no-restore -c Release
+      - name: Build project
+        run: dotnet build ${{ github.workspace }} --no-restore -c Release
 
-            - name: Check file structure
-              run: ls -la ${{ github.workspace }} | find obj
-              # run: ls -la ${{ github.workspace }}/obj/Release/net9.0
+      - name: Publish project
+        run: dotnet publish ${{ github.workspace }} --no-build --output ${{ github.workspace }}/.out
 
-            - name: Publish project
-              run: dotnet publish ${{ github.workspace }} --no-build --output ${{ github.workspace }}/.out
+      - name: Upload pipeline artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: dotnet-app
+          path: ${{ github.workspace }}/.out
 
+  deploy:
+    name: Deploy application
+    runs-on: ubuntu-latest
+    needs: 
+    - build
+    steps:
+      - name: Download pipeline artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: dotnet-app
+
+      - name: Login to Azure
+        uses: azure/login@v2.3.0
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Deploy to Azure WebApp
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+      
