--- a/.github/workflows/ims-webapp.yaml
+++ b/.github/workflows/ims-webapp.yaml
@@ -51,6 +51,8 @@ jobs:
   deploy:
     name: Deploy application
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
     needs: 
     - build
     steps:
