--- a/.github/workflows/ims-webapp.yaml
+++ b/.github/workflows/ims-webapp.yaml
@@ -66,7 +66,7 @@ jobs:
       - name: Check if secret is environment secret
         run: |
             if [[ "$IS_ENV_SECRET" == "true" ]]; then
-             echo "This is environment secret
+             echo "This is environment secret"
             else
              echo "This is repository secret"
             fi
