--- a/CoffeeShopIMS.Test/CoffeeShopIMS.Test.csproj
+++ b/CoffeeShopIMS.Test/CoffeeShopIMS.Test.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
-    <RootNamespace>coffee_shop_ims.Test</RootNamespace>
+    <RootNamespace>CoffeeShopIMS.Test</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
@@ -12,8 +12,13 @@
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
     <PackageReference Include="FluentAssertions" Version="8.6.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+    <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="xunit" Version="2.9.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="../CoffeeShopIMS/CoffeeShopIMS.csproj" />
   </ItemGroup>
 
   <ItemGroup>
