--- a/.github/workflows/ims-webapp.yaml
+++ b/.github/workflows/ims-webapp.yaml
@@ -15,8 +15,8 @@ permissions:
   contents: read
 
 jobs:
-  build:
-    name: Build application
+  test:
+    name: Run unit test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -30,22 +30,46 @@ jobs:
           dotnet-version: ${{ env.DOTNET_VERSION }}
 
       - name: Restore project's dependencies
-        run: dotnet restore ${{ github.workspace }} --no-cache
+        run: dotnet restore ${{ github.workspace }}/CoffeeShopIMS.Test --no-cache
+
+      - name: Run unit tests
+        run: dotnet test ${{ github.workspace }}/CoffeeShopIMS.Test --no-restore --logger trx --results-directory ${{ github.workspace }}/CoffeeShopIMS.Test/TestResults
+
+      - name: Upload test results
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-results
+          path: ${{ github.workspace }}/CoffeeShopIMS.Test/TestResults
+
+  build:
+    name: Build application
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v5
+        with:
+          clean: true
+
+      - name: Install .NET Core SDK
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: ${{ env.DOTNET_VERSION }}
+
+      - name: Restore project's dependencies
+        run: dotnet restore ${{ github.workspace }}/CoffeeShopIMS --no-cache
 
       - name: Build project
-        run: dotnet build ${{ github.workspace }} --no-restore -c Release
+        run: dotnet build ${{ github.workspace }}/CoffeeShopIMS --no-restore -c Release
 
       - name: Publish project
-        run: dotnet publish ${{ github.workspace }} --no-build --output ${{ github.workspace }}/.out
-
-      - name: Debug file structure
-        run: ls -la ${{ github.workspace }}/.out
+        run: dotnet publish ${{ github.workspace }}/CoffeeShopIMS --no-build --output ${{ github.workspace }}/CoffeeShopIMS/.out
 
       - name: Upload pipeline artifact
         uses: actions/upload-artifact@v4
         with:
           name: dotnet-app
-          path: ${{ github.workspace }}/.out
+          path: ${{ github.workspace }}/CoffeeShopIMS/.out
           include-hidden-files: true
 
   deploy:
@@ -54,9 +78,9 @@ jobs:
     permissions:
       id-token: write
       contents: none
-    # environment: DEV
-    needs: 
-    - build
+    environment: DEV
+    needs:
+      - build
     steps:
       - name: Download pipeline artifact
         uses: actions/download-artifact@v4
@@ -65,11 +89,11 @@ jobs:
 
       - name: Check if secret is environment secret
         run: |
-            if [[ "$IS_ENV_SECRET" == "true" ]]; then
-             echo "This is environment secret"
-            else
-             echo "This is repository secret"
-            fi
+          if [[ "$IS_ENV_SECRET" == "true" ]]; then
+           echo "This is environment secret"
+          else
+           echo "This is repository secret"
+          fi
         env:
           IS_ENV_SECRET: ${{ secrets.IS_ENV_SECRET }}
 
@@ -85,4 +109,3 @@ jobs:
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
           package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-      
