feat: Add Edit page and functionality, and Delete function

--- a/CoffeeShopIMS/appsettings.json
+++ b/CoffeeShopIMS/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=localhost,1433;Database=Inventory;User Id=sa;Password=1G69YN3xOErR;TrustServerCertificate=True;MultipleActiveResultSets=true;"
+    "Default": "Server=127.0.0.1,1433;Database=Inventory;User Id=sa;Password=1G69YN3xOErR;TrustServerCertificate=True;MultipleActiveResultSets=true;"
   }
 }
